--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "nollywood-names",
   "version": "1.0.0",
   "description": "A list of popular nollywood actor and actress in the world",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest src/index.test.js --coverage",
+    "validate": "npm run test",
+    "prebuild": "rimraf dist",
+    "build": "npm-run-all --parallel build:*",
+    "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build:umd": "webpack --output-filename index.umd.js",
+    "build:umd.min": "webpack --output-filename index.umd.min.js -p"
   },
   "keywords": [
     "movies",
@@ -12,9 +18,28 @@
     "actor",
     "actress"
   ],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "author": "Awonusi Olajide",
   "license": "MIT",
   "dependencies": {
-    "unique-random-array": "^1.0.1"
+    "unique-random-array": "1.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.4",
+    "ghooks": "^2.0.4",
+    "webpack": "^4.26.0",
+    "jest": "^23.6.0",
+    "npm-run-all": "^4.1.3",
+    "rimraf": "^2.6.2"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run validate"
+    }
   }
 }
