added to travisss

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dist",
     "README.md"
   ],
-  "author": "Awonusi Olajide",
+  "author": "Awonusi Olajide A.",
   "license": "MIT",
   "dependencies": {
     "babel-core": "^7.0.0-bridge.0",
