--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A list of popular nollywood actor and actress in the world",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest src/index.test.js --coverage",
-    "validate": "npm run test",
+    "test": "cross-env NODE_ENV=test jest src/index.test.js --coverage",
+    "validate": " npm run test",
     "prebuild": "rimraf dist",
-    "build": "babel --copy-files --out-dir dist --ignore *.test.js src"
+    "build": " babel --copy-files --out-dir dist --ignore *.test.js src"
   },
   "keywords": [
     "movies",
@@ -37,6 +37,7 @@
     "@babel/preset-env": "^7.1.6",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "cross-env": "^5.2.0",
     "ghooks": "^2.0.4",
     "npm-run-all": "^4.1.3",
     "regenerator-runtime": "^0.13.1",
