--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nollywood-names",
+  "name": "nollywoood-naames",
   "version": "1.0.0",
   "description": "A list of popular nollywood actor and actress in the world",
   "main": "dist/index.js",
